--- a/css/style.css
+++ b/css/style.css
@@ -82,7 +82,7 @@ body {
 
 .hero-img {
   width: 100%;
-  height: 60vh;
+  height: 40vh;
   object-fit: cover;
   display: block;
 }
@@ -99,7 +99,7 @@ body {
 
 .hero-content {
   position: absolute;
-  top: 50%;
+  ttop: 30%;
   left: 50%;
   transform: translate(-50%, -50%);
   max-width: 800px;
